--- a/POC2/app/src/main/res/layout-v3/activity_main.xml
+++ b/POC2/app/src/main/res/layout-v3/activity_main.xml
@@ -8,10 +8,14 @@
         android:layout_height="match_parent"
         android:background="@color/grey"
         tools:context=".MainActivity">
+
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" android:layout_alignParentTop="true" android:scrollbars="horizontal">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scrollbars="horizontal">
+
         <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="wrap_content"
@@ -19,65 +23,69 @@
             android:layout_gravity="left"
             android:layout_marginTop="420dp"
             android:layout_marginBottom="15dp"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
     </HorizontalScrollView>
+
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="81dp"
-        android:layout_height="595dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="230dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginEnd="20dp"
         android:text="100"
         android:textColor="@color/white"
-        android:textSize="34sp"/>
+        android:textSize="34sp" />
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="158dp"
-        android:layout_height="578dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="100"
         android:textColor="@color/white"
-        android:textSize="34sp"/>
+        android:textSize="34sp" />
+
     <TextView
         android:id="@+id/right"
-        android:layout_width="163dp"
-        android:layout_height="389dp"
-        android:layout_marginStart="291dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="150dp"
-        android:layout_marginEnd="-120dp"
-        android:layout_marginBottom="244dp"
-        android:text="0" android:textColor="@color/white" android:textSize="34sp"/>
+        android:layout_alignParentRight="true"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textSize="34sp" />
+
     <TextView
         android:id="@+id/left"
-        android:layout_width="179dp"
-        android:layout_height="360dp"
-        android:layout_marginStart="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="150dp"
         android:text="0"
-        android:textColor="@color/white" android:textSize="34sp"/>
-    <ImageView android:layout_width="79dp" android:layout_height="120dp"
-               android:layout_marginStart="16dp"
-               android:layout_marginLeft="16dp"
-               android:layout_marginTop="40dp"
-               android:layout_marginEnd="16dp"
-               android:layout_marginRight="16dp"
-               app:srcCompat="@drawable/batterysprite"/>
-    <ImageView android:layout_width="79dp" android:layout_height="120dp"
-               android:layout_marginStart="260dp"
-               android:layout_marginLeft="16dp"
-               android:layout_marginTop="40dp"
-               android:layout_marginEnd="16dp"
-               android:layout_marginRight="16dp"
-               app:srcCompat="@drawable/batterysprite"/>
+        android:textColor="@color/white"
+        android:textSize="34sp" />
+
+    <ImageView
+        android:layout_width="79dp"
+        android:layout_height="120dp"
+        android:layout_marginLeft="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="40dp"
+        app:srcCompat="@drawable/batterysprite"/>
+
+    <ImageView
+        android:layout_width="79dp"
+        android:layout_height="120dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="16dp"
+        app:srcCompat="@drawable/batterysprite" />
 </RelativeLayout>
